cmake_minimum_required (VERSION 3.0)
project (Thread_pool VERSION 1.0.1 DESCRIPTION "Thread pool")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
set (CMAKE_BINARY_DIR bin)
set (CMAKE_SOURCE_DIR src)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)

add_library()
target_link_libraries (main pthread)
